# NoteLight

./: .gitignore  CMakeLists.txt  Makefile
.cache/clangd/index/: drawingToolsMenu.cpp.392A4D3484CD82CD.idx  guiFunctional.h.668C5A3F09D6112C.idx  guiInternal.h.83052334D06BF5E8.idx  main.cpp.C41E4F6B6E7C3756.idx  mainWindow.cpp.F8FA7733AD40FFA5.idx  simpleColorDialog.cpp.1C523E0B60C9B2DC.idx  startApp.cpp.001AA3BD0A226A3B.idx  writingArea.cpp.D9E627DE7103E288.idx  zoomControl.cpp.EF08E856ADCCD31B.idx
src/: CMakeLists.txt  launch.cpp  launch.h  main.cpp
src/GUI/: CMakeLists.txt  mainWindow.cpp  mainWindow.h  mainWindowVisuals.cpp  resources.qrc
src/GUI/InputArea/: CMakeLists.txt  inputArea.cpp  inputArea.h  inputAreaVisuals.cpp
src/GUI/ScrollBar/: CMakeLists.txt  scrollBar.cpp  scrollBar.h  scrollBarVisuals.cpp
src/GUI/TitleBar/: CMakeLists.txt  titleBar.cpp  titleBar.h  titleBarVisuals.cpp
src/gui/: CMakeLists.txt  contentDialog.cpp  drawingToolsMenu.cpp  guiFunctional.h  guiInternal.h  mainWindow.cpp  penWidthSliderDialog.cpp  positionControl.cpp  simpleColorDialog.cpp  simpleSliderDialog.cpp  startApp.cpp  writingArea.cpp  zoomControl.cpp
